[package]
name = "r433rrd-rs"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
version = "0.1.23"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
async-process = "2.1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "rt-multi-thread", "net"]